--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
     "node-fetch": "^3.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
